lab-materials/05/app/base/service-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: claimdb
  labels:
    app: claimdb
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  ports:
  - name: postgresql
    protocol: TCP
    port: 5432
    targetPort: 5432
  selector:
    app: claimdb
  sessionAffinity: None
  type: ClusterIP
