lab-materials/05/app/base/route-app.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ic-app
  labels:
    app: ic-app
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  to:
    kind: Service
    name: ic-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
